# rincon-fire

./: .dockerignore  .gitignore  api_helpers.py  app.py  changes.diff  config.py  package-lock.json  project-outline.md  prompt_engineering.md  requirements.txt  resources.md  wildfires-simplified.csv
api/: predict.py  satellite.py
apps/: README.md  docker-compose.yml
apps/server/: .env.example  Dockerfile  README.md  pyproject.toml  worker.py
apps/server/app/: main.py
apps/server/app/api/routes/: __init__.py  areas.py  fire_areas.py  health.py  location.py  models.py  satellite.py  stations.py
apps/server/app/core/: config.py
apps/server/app/db/: bootstrap.py  engine.py  models.py  queries.py
apps/server/app/providers/: predictor.py  satellite.py  weather.py
apps/server/app/schemas/: api.py
apps/server/app/services/: model_runtime.py  models_registry.py  prediction.py  satellite.py  weather.py  weather_features.py
apps/server/data/: stations.csv
apps/server/data/models/: rf_baseline_untrained.joblib
apps/server/scripts/: init_rf_model.py  select_stations.py  verify_noaa_latest.sh
apps/server/tests/: test_config.py  test_models_registry.py  test_providers.py  test_queries.py  test_routes.py  test_schemas.py  test_select_stations.py  test_weather_features.py  test_worker.py
backend/: scratch.py
data/: database_manager.py  database_testing.py  fires.csv  wildfires-simplified.csv
data_access/: database_manager.py
deploy/: docker-compose.yml  docs.md
frontend/: index.html  package-lock.json  package.json
services/: model.py  (+2 more)
src/: main.py  (+11 more)
(+106 files in other folders)
